kressner-cv.css
@import url(http://fonts.googleapis.com/css?family=Lato:400,300);

body {
    background: #fff;
    color: #333;
    font-family: 'Lato', helvetica, sans-serif;
    font-size: 13px;
}

#container {
    margin: auto;
    width: 7in;
    padding: .5in;
}

#contact {
    float: right;
    text-align: right;
    padding-left: 25px;
}

#contact p {
  line-height: 75%;
}

img {
    width: 91px;
    height: auto;
    -webkit-border-radius: 50px;
    border-radius: 50px;
}

a {
    text-decoration: none;
    color: #999;
}

a:hover {
    border-bottom: 1px dashed #dedede;
    color: #bbb;
}

h1 {
    margin-top: 0;
    font-size: 32px;
    font-weight: 300;
}

h2 {
    margin-top: 50px;
    text-transform: uppercase;
    font-size: 18px;
    font-weight: 300;
}

h3 {
    margin-top: 0px;
    font-variant: small-caps;
    font-size: 18px;
    font-weight: 300;
}

.htmlhide {
  display: none;
}

.htmlhide + ul, .htmlhide + dl, .htmlhide + dl + ul {
  display: none;
}

ul {
    list-style-type: none;
}

ul li ul {
    list-style-type: disc;
    margin-bottom: 2em;
}

li {
    margin-top: 0em;
}

ul li ul li {
    margin: .5em;
}

blockquote {
  padding: 0 15px;
  color: #333;
  border-left: 3px solid #666;
}

/* Definitions */
dt {
    float: left;
    clear: left;
    width: 80px;
}
dd {
    margin-left: 80px;
}

@media only screen and (min-device-width : 320px) and (max-device-width: 1024px) {
  #container {
      padding: 0px;
      margin: auto;
      width: 95%;
  }

  #contact {
      float: none;
      text-align: center;
      padding-left: 0px;
      border-bottom: 1px solid #dedede;
  }
  h1 {
    margin-top: 50px;
  }
  h2 {
      margin-top: 10px;
  }
  dt {
      float: left;
      clear: left;
      width: 25px;
  }
  dd {
      margin-left: 35px;
  }
}

